# pyotr

./: .gitignore  .python-version  CODE_OF_CONDUCT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini  wily-report.html
.semaphore/: semaphore.yml
docs/: client.md  index.md  server.md
docs_custom/: main.html
src/examples/: client.py  petstore.yaml
src/examples/server/: pets.py  server.py
src/pyotr/: client.py  server.py  typing.py  utils.py
src/pyotr/client/: __init__.py  request.py  response.py  validation.py
src/pyotr/server/: __init__.py  validation.py
src/pyotr/server/validation/: starlette.py
src/pyotr/validation/requests/: __init__.py  client.py  starlette.py
src/pyotr/validation/responses/: __init__.py  client.py  starlette.py
src/tests/: __init__.py  conftest.py  endpoints.py  openapi.json  openapi.yaml  test_client.py  test_server.py
