[tool.poetry]
name = "pyotr"
version = "0.6.0"
description = "Python OpenAPI-to-REST (and back) framework "
authors = ["Berislav Lopac <berislav@lopac.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://pyotr.readthedocs.io"
repository = "https://github.com/berislavlopac/pyotr"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.1"
stringcase = "^1.2"
typing-extensions = "^3.7"
uvicorn = "^0.12"
httpx = "^0.15"
starlette = "^0.13"
openapi-core = "^0.13.1"
werkzeug = "^1.0.0"

[tool.poetry.extras]
uvicorn = ["uvicorn"]

[tool.poetry.dev-dependencies]
mkdocs = "^1.0"
pytest-asyncio = "^0.14"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.8.1"
requests = "^2.22"
pytest = "^6.0"
mypy_extensions = "^0.4.3"
black = "^21.4b2"
pydocstyle = "^6.1.1"
mypy = "^0.910"
tox = "^3.24.4"

[tool.black]
line-length = 96
target-version = ['py37', 'py38', 'py39']
verbose = false
skip-string-normalization = false

[tool.coverage.run]
source = [ "src/pyotr/", ]
omit = [ "*/tests/*", "src/tests/*", ]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 90
exclude_lines = [ "pragma: no cover", "@abstract",]

[tool.pydocstyle]
add-ignore = "D105, D107, D212, D401"
convention = "google"
match-dir = "^(?!tests|examples).*"

[tool.mypy]
mypy_path = "src/"
ignore_missing_imports = true

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
